--- a/aboutme.html
+++ b/aboutme.html
@@ -164,6 +164,25 @@ updateSnowfall();
        <br>
        <br>
 
+       <section id="about" class="section container about-section">
+     <section id="about" class="about-section">
+        
+  <div class="about-card glass">
+    <p>This was the day of our Capstone Defense. I was extremely nervous, but I just thought, ‘Let’s do this—whatever happens, happens! </p>
+  <div class="avatar-wrap">
+    <img src="ENVIROSPEAK EXPLORING THE EFFICACY OF VOICE ASSISTANT APPLICATIONS FOR VISUALLY IMPAIRED INDIVIDUALS.png" alt="" class="avatar">
+    <img src="soso.jpeg" alt="" class="avatar">
+  </div>
+  <div class="about-content">
+   
+  </div>
+</div>
+
+      <br>
+       <br>
+       <br>
+
+
 <section id="about" class="section container about-section">
      <section id="about" class="about-section">
         
@@ -241,6 +260,7 @@ updateSnowfall();
   
 </body>
 </html>
+
 
 
 
