--- a/aboutme.html
+++ b/aboutme.html
@@ -171,7 +171,7 @@ updateSnowfall();
     <p>This was the day of our Capstone Defense. I was extremely nervous, but I just thought, ‘Let’s do this—whatever happens, happens! </p>
   <div class="avatar-wrap">
     <img src="ENVIROSPEAK EXPLORING THE EFFICACY OF VOICE ASSISTANT APPLICATIONS FOR VISUALLY IMPAIRED INDIVIDUALS.png" alt="" class="avatar">
-    <img src="soso.jpeg" alt="" class="avatar">
+    <img src="soso.jpeg" alt="" class="avatar2">
   </div>
   <div class="about-content">
    
@@ -260,6 +260,7 @@ updateSnowfall();
   
 </body>
 </html>
+
 
 
 
