--- a/aboutme.html
+++ b/aboutme.html
@@ -138,7 +138,7 @@ updateSnowfall();
     <img src="pogi1.jpeg" alt="" class="avatar">
   </div>
   <div class="about-content">
-   
+    <p>I was born on June 20, 2000, in the peaceful community of Pondol, Balamban, Cebu, where my journey began." </p>
   </div>
 </div>
 
@@ -260,6 +260,7 @@ updateSnowfall();
   
 </body>
 </html>
+
 
 
 
