--- a/aboutme.html
+++ b/aboutme.html
@@ -227,7 +227,7 @@ updateSnowfall();
      <section id="about" class="about-section">
         
   <div class="about-card glass">
-    <p>My pretty teacher in our Rizal class. ❤️‍🔥</p>
+    <p>This is Ma'am Cha, my pretty teacher in our Rizal class. ❤️‍🔥</p>
   <div class="avatar-wrap">
     <img src="poco.jpeg" alt="" class="avatar4">
     <img src="poco2.jpeg" alt="" class="avatar4">
@@ -260,6 +260,7 @@ updateSnowfall();
   
 </body>
 </html>
+
 
 
 
