--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ updateSnowfall();
       <i class="fab fa-facebook"></i> Facebook
     </a>
     <a href="https://mail.google.com/mail/u/0/#inbox" class="contact-btn email">
-      <i class="fas fa-envelope"></i> Email
-    </a>
+      <i class="fas fa-envelope"></i> Email: clarkedvardflores@gmail.com
+    </a
     <a  class="contact-btn phone">
       <i class="fas fa-phone"></i> Mobile Number: 09075116884(TNT)
     </a>
@@ -313,4 +313,5 @@ updateSnowfall();
   <script src="script.js"></script>
 </body>
 </html>
+
 
