--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ updateSnowfall();
       </div>
 
       <nav class="nav" aria-label="Main">
-        <a href="#about">About</a>
+        <a href="index.html">Home</a>
+         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -313,6 +314,7 @@ updateSnowfall();
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
