--- a/aboutme.html
+++ b/aboutme.html
@@ -84,6 +84,7 @@ updateSnowfall();
       </div>
 
       <nav class="nav" aria-label="Main">
+        <a href="index.html">Home</a>
         <a href="index.html">About</a>
         <a href="index.html">Projects</a>
         <a href="index.html">Contact</a>
@@ -473,3 +474,4 @@ document.addEventListener("DOMContentLoaded", () => {
   
 </body>
 </html>
+
